--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^3.0.2",
+		"cookie-parser": "^1.4.7",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
 		"express-mongo-sanitize": "^2.2.0",
